[metadata]
name = xflow-net
author = XGraphing
author_email = zchen@cse.msstate.edu
description = A Graph Flow Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/XGraphing/XFlow
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find: